--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hmu-bot",
+  "name": "gloss-bot",
   "type": "module",
   "version": "0.0.0",
   "description": "A bot for verifying members",
