--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   "dependencies": {
     "@cloudflare/workers-types": "^4.20240529.0",
     "@hono/node-server": "^1.11.4",
-    "discord-interactions": "^4.0.0",
+    "discord-interactions": "^4.3.0",
     "discord.js": "^14.15.3",
     "hono": "^4.4.8",
     "js-base64": "^3.7.7",
     "otp": "^1.1.2",
     "uuid": "^10.0.0",
-    "wrangler": "~3.80.0"
+    "wrangler": "^4.14.4"
   }
 }
