--- a/patreon/package.json
+++ b/patreon/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.15.3"
+    "date-fns": "^4.1.0",
+    "discord.js": "^14.15.3",
+    "node-cron": "^4.1.0"
   }
 }
