--- a/patreon/Dockerfile
+++ b/patreon/Dockerfile
@@ -9,5 +9,6 @@ RUN npm install --ci
 # Copying env file means this is not safe to publish as an artifact,
 # must be kept locally to deployment
 COPY .env tsconfig.json *.ts ./
+COPY src/ /app/src
 
 CMD ["npm", "run", "start"]
