--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,103 @@
-node_modules
-.env*
-yarn.lock
-.DS_Store
-*.tgz
-.npm
-*.log
-.wrangler
-google-service-account-keys.json
-.dev.vars
-playwright-report
-test-results
+# Dependencies
+node_modules/
+*/node_modules/
+.pnp
+.pnp.js
 
-# SQLite database files
+# Build outputs
+dist/
+*/dist/
+build/
+*/build/
+
+# Environment files
+.env*
+!.env.example
+.dev.vars
+
+# Package manager files
+yarn.lock
+package-lock.json
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+*/logs/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# ESLint cache
+.eslintcache
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Temporary folders
+tmp/
+temp/
+
+# IDE/Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Test outputs
+test-results/
+*/test-results/
+playwright-report/
+*/playwright-report/
+coverage/
+
+# Database files
 *.db
 *.db-shm
 *.db-wal
+*.sqlite
+*.sqlite3
+
+# Claude Code files
+.claude/
+
+# Wrangler/Cloudflare
+.wrangler/
+
+# Service account keys
+google-service-account-keys.json
+*-service-account-*.json
+
+# Turbo
+.turbo/
