--- a/administration/server/Dockerfile
+++ b/administration/server/Dockerfile
@@ -1,30 +1,58 @@
-FROM node:20-alpine
+# Build stage
+FROM node:20-alpine AS builder
 
 # Install build dependencies for native modules
 RUN apk add --no-cache python3 make g++
 
 WORKDIR /app
 
-# Copy package files from server directory
-COPY server/package*.json ./
+# Copy package files first for better layer caching
+COPY package*.json ./
 
-# Install dependencies (this will build native modules in the container)
-RUN npm ci
+# Install all dependencies (including dev dependencies)
+RUN npm ci --only=production=false
 
-# Copy server source code
-COPY server/ .
-
-# Copy schema from root
-COPY schema.sql ./schema.sql
+# Copy source code and config files
+COPY tsconfig.json ./
+COPY kysely.config.ts ./
+COPY src/ ./src/
 
 # Build the application
 RUN npm run build
 
-# Create data directory
-RUN mkdir -p /app/data
+# Production stage
+FROM node:20-alpine AS production
+
+# Install runtime dependencies for native modules
+RUN apk add --no-cache python3
+
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nodejs -u 1001
+
+WORKDIR /app
+
+# Copy package files
+COPY package*.json ./
+
+# Install only production dependencies
+RUN npm ci --only=production && npm cache clean --force
+
+# Copy built application from builder stage
+COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
+
+# Create data directory with proper permissions
+RUN mkdir -p /app/data && chown -R nodejs:nodejs /app/data
+
+# Switch to non-root user
+USER nodejs
 
 # Expose port
 EXPOSE 3000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })" || exit 1
 
 # Start the application
 CMD ["npm", "start"]
