Fix docker builds

--- a/administration/server/Dockerfile
+++ b/administration/server/Dockerfile
@@ -1,16 +1,18 @@
 # Build stage
 FROM node:20-alpine AS builder
 
-# Install build dependencies for native modules
-RUN apk add --no-cache python3 make g++
+# Install dependencies for node-gyp and native modules
+RUN apk add --no-cache libc6-compat python3 make g++
 
 WORKDIR /app
 
 # Copy package files first for better layer caching
-COPY package*.json ./
+COPY package.json ./
+# FIXME: This is broken because Turborepo/monorepo design does funky things with lockfiles. It puts the lockfile in the root, which includes the lockfile for the server dependencies as well.
+# COPY package-lock.json ./
 
-# Install all dependencies (including dev dependencies)
-RUN npm ci --only=production=false
+# Install dependencies with clean npm cache
+RUN npm install
 
 # Copy source code and config files
 COPY tsconfig.json ./
@@ -23,8 +25,10 @@ RUN npm run build
 # Production stage
 FROM node:20-alpine AS production
 
-# Install runtime dependencies for native modules
-RUN apk add --no-cache python3
+# Install security updates and runtime dependencies
+RUN apk add --no-cache --upgrade && \
+    apk add --no-cache python3 curl && \
+    rm -rf /var/cache/apk/*
 
 # Create non-root user for security
 RUN addgroup -g 1001 -S nodejs && \
@@ -33,16 +37,17 @@ RUN addgroup -g 1001 -S nodejs && \
 WORKDIR /app
 
 # Copy package files
-COPY package*.json ./
+COPY package.json ./
 
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+RUN npm install
 
 # Copy built application from builder stage
 COPY --from=builder --chown=nodejs:nodejs /app/dist ./dist
 
 # Create data directory with proper permissions
-RUN mkdir -p /app/data && chown -R nodejs:nodejs /app/data
+RUN mkdir -p /app/data && \
+    chown -R nodejs:nodejs /app/data && \
+    chmod -R 755 /app/data
 
 # Switch to non-root user
 USER nodejs
@@ -52,7 +57,7 @@ EXPOSE 3000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })" || exit 1
+    CMD curl -f http://localhost:3000/health || exit 1
 
 # Start the application
 CMD ["npm", "start"]
