--- a/administration/server/package.json
+++ b/administration/server/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@types/uuid": "^10.0.0",
     "axios": "^1.11.0",
-    "better-sqlite3": "^9.2.2",
+    "better-sqlite3": "^12.2.0",
     "bull": "^4.16.5",
     "cors": "^2.8.5",
     "discord.js": "^14.21.0",
@@ -58,5 +58,8 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "better-sqlite3": "^12.2.0"
   }
 }
