--- a/administration/server/package.json
+++ b/administration/server/package.json
@@ -23,6 +23,7 @@
     "db:codegen": "kysely-codegen --dialect sqlite --url ./data/club.db --out-file ./src/types/database.ts"
   },
   "dependencies": {
+    "@effect/schema": "^0.75.5",
     "@types/uuid": "^10.0.0",
     "axios": "^1.11.0",
     "better-sqlite3": "^12.2.0",
@@ -30,6 +31,7 @@
     "cors": "^2.8.5",
     "discord.js": "^14.21.0",
     "dotenv": "^16.3.1",
+    "effect": "^3.17.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "klaviyo-api": "^19.0.0",
@@ -41,6 +43,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@effect/language-service": "^0.33.1",
     "@types/better-sqlite3": "^7.6.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
