--- a/administration/server/tsconfig.json
+++ b/administration/server/tsconfig.json
@@ -4,11 +4,15 @@
     "module": "commonjs",
     "lib": ["ES2022"],
     "types": ["node", "vitest/globals"],
+    "plugins": [
+      { "name": "@effect/language-service" }
+    ],
     "outDir": "./dist",
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "declaration": true,
