--- a/administration/package.json
+++ b/administration/package.json
@@ -72,14 +72,17 @@
     "husky": "^9.0.11",
     "knip": "^5.62.0",
     "lint-staged": "^15.2.8",
+    "prettier-plugin-organize-imports": "^4.2.0",
     "turbo": "^2.5.5"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
+      "prettier --write",
       "eslint --fix",
       "git add"
     ],
     "*.{json,md,yml,yaml}": [
+      "prettier --write",
       "git add"
     ]
   }
