--- a/administration/package.json
+++ b/administration/package.json
@@ -11,30 +11,30 @@
   "packageManager": "npm@10.5.0",
   "scripts": {
     "dev": "npm run setup:check && turbo run dev --parallel",
-    "dev:server": "npm run setup:check && turbo run dev --filter=club-management-server",
-    "dev:client": "npm run setup:check && turbo run dev --filter=club-management-client",
-    "dev:tests": "turbo run test:watch --filter=club-management-tests",
-    "dev:simple": "npm run setup:check && turbo run dev --filter=club-management-server --filter=club-management-client --parallel",
+    "dev:server": "npm run setup:check && turbo run dev --filter=api-server",
+    "dev:client": "npm run setup:check && turbo run dev --filter=web-app",
+    "dev:tests": "turbo run test:watch --filter=e2e",
+    "dev:simple": "npm run setup:check && turbo run dev --filter=api-server --filter=web-app --parallel",
     "setup": "npm install && npm run setup:env && npm run setup:db",
     "setup:env": "node scripts/setup-env.js",
     "setup:db": "npm run db:migrate:latest && npm run db:seed",
     "setup:check": "node scripts/check-setup.js",
     "setup:fresh": "npm run clean && npm run setup",
     "build": "turbo run build",
-    "build:server": "turbo run build --filter=club-management-server",
-    "build:client": "turbo run build --filter=club-management-client",
-    "start": "turbo run start --filter=club-management-server",
+    "build:server": "turbo run build --filter=api-server",
+    "build:client": "turbo run build --filter=web-app",
+    "start": "turbo run start --filter=api-server",
     "test": "turbo run test",
-    "test:server": "turbo run test --filter=club-management-server",
-    "test:client": "turbo run test --filter=club-management-client",
-    "test:e2e": "turbo run test --filter=club-management-tests",
+    "test:server": "turbo run test --filter=api-server",
+    "test:client": "turbo run test --filter=web-app",
+    "test:e2e": "turbo run test --filter=e2e",
     "test:watch": "turbo run test:watch --parallel",
     "lint": "turbo run lint",
-    "lint:server": "turbo run lint --filter=club-management-server",
-    "lint:client": "turbo run lint --filter=club-management-client",
+    "lint:server": "turbo run lint --filter=api-server",
+    "lint:client": "turbo run lint --filter=web-app",
     "typecheck": "turbo run typecheck",
-    "typecheck:server": "turbo run typecheck --filter=club-management-server",
-    "typecheck:client": "turbo run typecheck --filter=club-management-client",
+    "typecheck:server": "turbo run typecheck --filter=api-server",
+    "typecheck:client": "turbo run typecheck --filter=web-app",
     "deadcode": "knip",
     "deadcode:production": "knip --production",
     "clean": "turbo run clean && rm -rf node_modules",
