--- a/administration/server/Dockerfile
+++ b/administration/server/Dockerfile
@@ -7,14 +7,14 @@ RUN npm install -g turbo@^2
 COPY . .
 
 # Generate a partial monorepo with a pruned lockfile for the server workspace
-RUN turbo prune club-management-server --docker
+RUN turbo prune api-server --docker
 
 # Change to out directory and install dependencies
 WORKDIR /app/out
 RUN npm ci --frozen-lockfile
 
 # Build the project
-RUN npm run build --filter=club-management-server
+RUN npm run build --filter=api-server
 
 # Production stage
 FROM node:20-alpine AS production
@@ -49,4 +49,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:3000/health || exit 1
 
 # Start the application
-CMD ["npm", "run", "start", "--workspace=club-management-server"]
+CMD ["npm", "run", "start", "--workspace=api-server"]
