--- a/administration/client/package.json
+++ b/administration/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "club-management-client",
+  "name": "web-app",
   "version": "1.0.0",
   "description": "Frontend for club management system",
   "type": "module",
