--- a/administration/.github/workflows/ci.yml
+++ b/administration/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 env:
   NODE_VERSION: '20'
@@ -18,26 +18,26 @@ jobs:
   lint:
     name: 🔍 Lint & Code Quality
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🔍 Run ESLint
         run: npm run lint
-        
+
       - name: 🧹 Check for dead code
         run: npm run deadcode
-        
+
       - name: 📋 Check dead code (production)
         run: npm run deadcode:production
 
@@ -47,20 +47,20 @@ jobs:
   typecheck:
     name: 🔧 TypeScript
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🔧 Run TypeScript checks
         run: npm run typecheck
 
@@ -70,33 +70,33 @@ jobs:
   test:
     name: 🧪 Unit & Integration Tests
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: ['18', '20', '22']
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🗄️ Setup test database
         run: npm run setup:db
-        
+
       - name: 🧪 Run server tests
         run: npm run test:server
-        
+
       - name: 🧪 Run client tests
         run: npm run test:client
-        
+
       - name: 📊 Upload coverage reports
         if: matrix.node-version == '20'
         uses: codecov/codecov-action@v4
@@ -110,23 +110,23 @@ jobs:
   build:
     name: 🏗️ Build Verification
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🏗️ Build all packages
         run: npm run build
-        
+
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -142,31 +142,31 @@ jobs:
   docker:
     name: 🐳 Docker Build
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 🐳 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        
+
       - name: 🏗️ Build server image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./server/Dockerfile
           push: false
-          tags: club-management-server:ci
+          tags: api-server:ci
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          
+
       - name: 🏗️ Build client image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./client/Dockerfile
           push: false
-          tags: club-management-client:ci
+          tags: web-app:ci
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -177,41 +177,41 @@ jobs:
     name: 🎭 E2E Tests
     runs-on: ubuntu-latest
     needs: [build]
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🗄️ Setup database
         run: npm run setup:db
-        
+
       - name: 📥 Download build artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          
+
       - name: 🎭 Install Playwright browsers
         run: npx playwright install --with-deps
         working-directory: tests
-        
+
       - name: 🚀 Start application for E2E tests
         run: |
           npm run dev:simple &
           # Wait for services to be ready
           npx wait-on http://localhost:3000/health http://localhost:5173 --timeout 60000
-        
+
       - name: 🎭 Run E2E tests
         run: npm run test:e2e
-        
+
       - name: 📊 Upload E2E test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -228,30 +228,30 @@ jobs:
   database:
     name: 🗄️ Database Operations
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🗄️ Test database migrations
         run: |
           cd server
           npm run db:migrate:latest
-          
+
       - name: 🌱 Test database seeding
         run: |
           cd server
           npm run db:seed
-          
+
       - name: 🔧 Test database codegen
         run: |
           cd server
@@ -265,23 +265,23 @@ jobs:
   security:
     name: 🔒 Security Scan
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: 📂 Checkout code
         uses: actions/checkout@v4
-        
+
       - name: 📦 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
           cache: 'npm'
-          
+
       - name: 📥 Install dependencies
         run: npm ci
-        
+
       - name: 🔒 Run npm audit
         run: npm audit --audit-level=high
-        
+
       - name: 🔍 Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
@@ -289,7 +289,7 @@ jobs:
           scan-ref: '.'
           format: 'sarif'
           output: 'trivy-results.sarif'
-          
+
       - name: 📤 Upload Trivy scan results
         if: always()
         uses: github/codeql-action/upload-sarif@v3
@@ -304,7 +304,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [lint, typecheck, test, build, docker, e2e, database, security]
     if: always()
-    
+
     steps:
       - name: ✅ Check all jobs succeeded
         if: contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled')
@@ -319,6 +319,6 @@ jobs:
           echo "Database: ${{ needs.database.result }}"
           echo "Security: ${{ needs.security.result }}"
           exit 1
-          
+
       - name: 🎉 All checks passed
         run: echo "🎉 All CI checks passed successfully!"
