Add dev:e2e that uses test db, and reset test db on e2e run

--- a/administration/client/package.json
+++ b/administration/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:e2e": "vite",
     "build": "tsc && vite build",
     "test": "vitest --run",
     "test:watch": "vitest --watch",
