--- a/administration/turbo.json
+++ b/administration/turbo.json
@@ -15,6 +15,10 @@
       "cache": false,
       "persistent": true
     },
+    "dev:e2e": {
+      "cache": false,
+      "persistent": true
+    },
     "lint": {
       "dependsOn": ["^build"]
     },
