--- a/administration/package.json
+++ b/administration/package.json
@@ -35,6 +35,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "dependency-cruiser": "^17.0.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^9.0.11",
