--- a/administration/server/package.json
+++ b/administration/server/package.json
@@ -23,6 +23,12 @@
   },
   "dependencies": {
     "@casl/ability": "^6.7.3",
+    "@effect/opentelemetry": "^0.56.4",
+    "@opentelemetry/sdk-logs": "^0.203.0",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "@opentelemetry/sdk-trace-web": "^2.0.1",
     "@types/uuid": "^10.0.0",
     "axios": "^1.11.0",
     "better-auth": "^1.3.5",
