Actually working client SDK

--- a/administration/client/package.json
+++ b/administration/client/package.json
@@ -13,6 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "api-server": "workspaces:*",
     "@heroicons/react": "^2.0.18",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
