--- a/administration/server/tsconfig.sdk.json
+++ b/administration/server/tsconfig.sdk.json
@@ -4,18 +4,9 @@
     "outDir": "./dist-sdk",
     "rootDir": "./src",
     "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "emitDeclarationOnly": false,
-    "stripInternal": true
+    "emitDeclarationOnly": true,
+    "declarationMap": true
   },
-  "include": [
-    "src/sdk/**/*",
-    "src/api/**/*.ts",
-    "src/types/index.ts"
-  ],
-  "exclude": [
-    "src/**/*.test.ts",
-    "src/**/__tests__/**/*"
-  ]
+  "include": ["src/sdk/**/*"],
+  "exclude": ["**/*.test.*", "**/*.spec.*"]
 }
